--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title> Great Pyrenees</title>
 
 <link
-href="Stylesheet.css"
+href="CSS/Stylesheet.css"
 rel= "stylesheet"
 type="text/css">
 
